| Bug #16851 | Cluster: Auto Database Push is not working properly | ||
|---|---|---|---|
| Submitted: | 27 Jan 2006 19:04 | Modified: | 31 Jan 2006 13:50 |
| Reporter: | Jonathan Miller | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S2 (Serious) |
| Version: | 5.1.6-alpha | OS: | Linux (Linux) |
| Assigned to: | Tomas Ulin | CPU Architecture: | Any |
[27 Jan 2006 19:04]
Jonathan Miller
[27 Jan 2006 19:06]
Jonathan Miller
mysql> use cluster_replication Reading table information for completion of table and column names You can turn off this feature to get a quicker startup with -A Database changed mysql> show tables; +-------------------------------+ | Tables_in_cluster_replication | +-------------------------------+ | apply_status | | binlog_index | | schema | +-------------------------------+ 3 rows in set (0.00 sec) cluster_replication]$ ls apply_status.frm binlog_index.frm binlog_index.MYI schema.frm apply_status.ndb binlog_index.MYD db.opt schema.ndb
[28 Jan 2006 16:51]
Jonathan Miller
I was getting the following this morning until I did CREATE DATABASE TPCB; 060128 17:48:37 [Note] NDB: missing frm for cluster_replication.apply_status, discovering... 060128 17:48:37 [Note] NDB: missing frm for TPCB.teller, discovering... 060128 17:48:37 [Note] NDB: missing frm for TPCB.branch, discovering... 060128 17:48:37 [Note] NDB: missing frm for TPCB.history, discovering... 060128 17:48:37 [Note] NDB: missing frm for TPCB.trans, discovering... 060128 17:48:37 [Note] NDB: missing frm for cluster_replication.schema, discovering... 060128 17:48:37 [Note] NDB: missing frm for TPCB.account, discovering... 060128 17:48:38 [Note] NDB: missing frm for cluster_replication.apply_status, discovering... 060128 17:48:38 [Note] NDB: missing frm for TPCB.teller, discovering... 060128 17:48:38 [Note] NDB: missing frm for TPCB.branch, discovering... 060128 17:48:38 [Note] NDB: missing frm for TPCB.history, discovering... 060128 17:48:38 [Note] NDB: missing frm for TPCB.trans, discovering... 060128 17:48:38 [Note] NDB: missing frm for cluster_replication.schema, discovering... 060128 17:48:38 [Note] NDB: missing frm for TPCB.account, discovering... 060128 17:48:39 [Note] NDB: missing frm for cluster_replication.apply_status, discovering... 060128 17:48:39 [Note] NDB: missing frm for TPCB.teller, discovering... 060128 17:48:39 [Note] NDB: missing frm for TPCB.branch, discovering... 060128 17:48:39 [Note] NDB: missing frm for TPCB.history, discovering... 060128 17:48:39 [Note] NDB: missing frm for TPCB.trans, discovering... 060128 17:48:39 [Note] NDB: missing frm for cluster_replication.schema, discovering... 060128 17:48:39 [Note] NDB: missing frm for TPCB.account, discovering... 060128 17:48:40 [Note] NDB: missing frm for cluster_replication.apply_status, discovering... 060128 17:48:40 [Note] NDB: missing frm for TPCB.teller, discovering... 060128 17:48:40 [Note] NDB: missing frm for TPCB.branch, discovering... 060128 17:48:40 [Note] NDB: missing frm for TPCB.history, discovering... 060128 17:48:40 [Note] NDB: missing frm for TPCB.trans, discovering... 060128 17:48:40 [Note] NDB: missing frm for cluster_replication.schema, discovering... 060128 17:48:40 [Note] NDB: missing frm for TPCB.account, discovering... 060128 17:48:41 [Note] NDB: missing frm for cluster_replication.apply_status, discovering... 060128 17:48:41 [Note] NDB: missing frm for TPCB.teller, discovering... 060128 17:48:41 [Note] NDB: missing frm for TPCB.branch, discovering... 060128 17:48:41 [Note] NDB: missing frm for TPCB.history, discovering... 060128 17:48:41 [Note] NDB: missing frm for TPCB.trans, discovering... 060128 17:48:41 [Note] NDB: missing frm for cluster_replication.schema, discovering... 060128 17:48:41 [Note] NDB: missing frm for TPCB.account, discovering... 060128 17:48:42 [Note] NDB: missing frm for cluster_replication.apply_status, discovering... 060128 17:48:42 [Note] NDB: missing frm for cluster_replication.schema, discovering... 060128 17:48:43 [Note] NDB: missing frm for cluster_replication.apply_status, discovering... 060128 17:48:43 [Note] NDB: missing frm for cluster_replication.schema, discovering... 060128 17:48:45 [Note] NDB: missing frm for cluster_replication.apply_status, discovering... 060128 17:48:45 [Note] NDB: missing frm for cluster_replication.schema, discovering... 060128 17:48:46 [Note] NDB: missing frm for cluster_replication.apply_status, discovering... 060128 17:48:46 [Note] NDB: missing frm for cluster_replication.schema, discovering... 060128 17:48:47 [Note] NDB: missing frm for cluster_replication.apply_status, discovering... 060128 17:48:47 [Note] NDB: missing frm for cluster_replication.schema, discovering... 060128 17:48:48 [Note] NDB: missing frm for cluster_replication.apply_status, discovering... 060128 17:48:48 [Note] NDB: missing frm for cluster_replication.schema, discovering...
[30 Jan 2006 12:45]
Jonathan Miller
A key element I thought of this morning, is none of the MySQLD we running a bin log.
[30 Jan 2006 23:43]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/1901
[31 Jan 2006 13:45]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/1940
[31 Jan 2006 13:50]
Tomas Ulin
pushed to 5.1.6, no need to document as it is not released
