Bug #16851, log floods with ndb discover messages + fix crashing bug when discovering ndb tables outside select context